force-app/main/default/objects/Conditions_Admission_Criterion__mdt/Conditions_Admission_Criterion__mdt.object-meta.xml
<CustomObject>
    <label>Conditions Admission Criterion</label>
    <pluralLabel>Conditions Admission Criteria</pluralLabel>
</CustomObject>