force-app/main/default/objects/Conditions_Admission_Criterion__mdt/fields/Conditions_Admission_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Conditions_Admission_Mapping__c</fullName>
    <inlineHelpText>The Condition Admission Mapping to which this Criterion is related</inlineHelpText>
    <label>Conditions Admission Mapping</label>
    <referenceTo>Conditions_Admission_Mapping__mdt</referenceTo>
    <relationshipLabel>Conditions Admission Criteria</relationshipLabel>
    <relationshipName>Conditions_Admission_Criteria</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>