force-app/main/default/objects/Conditions_Admission_Criterion__mdt/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <inlineHelpText>Field API Name of the operator field</inlineHelpText>
    <label>Field Api Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>