force-app/main/default/objects/Conditions_Admission_Criterion__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equal To</fullName>
                <default>true</default>
                <label>Equal To</label>
            </value>
            <value>
                <fullName>Not Equal To</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Greater Than Equal To</fullName>
            </value>
            <value>
                <fullName>Lesser Than</fullName>
            </value>
            <value>
                <fullName>Lesser Than Equal To</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Not Contains</fullName>
            </value>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Not In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>