force-app/main/default/objects/Conditions_Admission_Criterion__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>The operand of this evaluation criterion</inlineHelpText>
    <label>Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>