force-app/main/default/objects/Conditions_Admission_Criterion__mdt/listViews/Custom_View.listView-meta.xml
<ListView>
    <fullName>Custom_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Conditions_Admission_Mapping__c</columns>
    <columns>Field_Api_Name__c</columns>
    <columns>Operator__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>Custom View</label>
</ListView>